# nkp-academy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.claude/: launch.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  content.py  database.py  deps.py  exam.py  flashcards.py  main.py  metrics.py  models.py  schemas.py  scoring.py  seed.py  services.py
backend/app/routers/: __init__.py  auth.py  content_router.py  exam.py  flashcards.py  leaderboard.py  progress.py  quiz.py
backend/tests/: conftest.py  test_content.py  test_exam.py  test_flashcards.py  test_quiz_api.py  test_scoring.py
content/: badges.yaml
content/flashcards/: 01-fundamentals.yaml  02-capi.yaml  03-clusters-apps.yaml  04-access.yaml  05-networking.yaml  06-security.yaml  07-storage.yaml  08-backup.yaml  09-observability.yaml  10-cli.yaml
content/modules/: 05-ncpcn-s1-registry.yaml  06-ncpcn-s1-bootstrap.yaml  07-ncpcn-s1-licensing.yaml  08-ncpcn-s1-bastion.yaml  09-ncpcn-s1-images.yaml  10-ncpcn-s1-cluster-info.yaml  11-ncpcn-s2-deploy-clusters.yaml  12-ncpcn-s2-kommander.yaml  13-ncpcn-s3-authn.yaml  14-ncpcn-s3-logging.yaml  15-ncpcn-s3-backup.yaml  16-ncpcn-s3-monitoring.yaml  17-ncpcn-s3-autoscaling.yaml  18-ncpcn-s3-lifecycle.yaml  19-ncpcn-s4-workspaces.yaml  20-ncpcn-s4-deploy-workload.yaml  21-ncpcn-s4-attach.yaml  22-ncpcn-s4-detach.yaml  23-ncpcn-s4-projects.yaml  24-ncpcn-s4-platform-apps.yaml
docs/: ARCHITECTURE.md  BOOTCAMP-LAB-GUIDE.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
(+35 files in other folders)
