[project]
name = "nkp-academy"
version = "1.0.0"
description = "Gamified Nutanix Kubernetes Platform (NKP) enablement app for channel partners."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.35",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "aiosqlite>=0.20,<0.22",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "prometheus-client>=0.21,<0.24",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30,<0.31"]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.26",
    "httpx>=0.27,<0.29",
    "ruff>=0.7,<0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/Query()/Header() in argument defaults is the
# intended idiom, not a bug.
ignore = ["B008"]
